compiler/src/test/resources/amyc/execution/passing/Match1.grading.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int) : Foo
  case class Baz(f1: Foo, f2: Foo) : Foo

  Baz(Baz(Baz(Bar(1), Bar(2)), Bar(3)), Bar(4)) match {
    case Baz(Baz(Baz(Bar(1), Bar(2)), Bar(3)), Bar(4)) =>
      ()
  }
end MatchError
