compiler/src/test/resources/amyc/execution/failing/MatchError1.grading.amy
object MatchError
  abstract class Foo
  case class Bar() : Foo
  case class Baz() : Foo

  Bar() match { case Baz() => () }
end MatchError
